# video-agent

./: .env.example  .gitignore  API_KEYS_SETUP.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DOCKER.md  Dockerfile  LICENSE  Makefile  PROJECT_COMPLETE.md  QUICKSTART.md  README.md  TROUBLESHOOTING.md  _test_ddg.py  cli.py  docker-compose.yml  examples.py  pyproject.toml  requirements.txt  setup.bat  setup.sh
assets/music/: CREDIT.txt
config/: config.example.toml
helpers/: audio_mixer.py  cut_detector.py  edl_validator.py  grade.py  image_gen.py  llm_task.py  pack_transcripts.py  remotion_runner.py  render.py  scene_assembler.py  seedance_runner.py  self_eval.py  thumbnail.py  timeline_view.py  transcribe.py  web_research.py
remotion/: package-lock.json  package.json  remotion.config.ts  tsconfig.json
remotion/src/: Root.tsx
remotion/src/compositions/: BrandConfig.ts  CaptionBar.tsx  DefinitionCard.tsx  FactCounter.tsx  KineticText.tsx  KineticTypography.tsx  ListReveal.tsx  MapHighlight.tsx  QuickZoom.tsx  QuoteCard.tsx  SplitComparison.tsx  StatCard.tsx  Timeline.tsx  TitleCard.tsx
remotion/src/compositions/geo/: geoMath.ts  worldData.ts
src/: __init__.py  cli.py  main.py
src/core/: __init__.py  config.py  llm.py
src/modules/: __init__.py  agent.py  content_search.py  email_notifier.py  geography_autopilot.py  video_editor.py  video_fetcher.py  voice_subtitle.py  youtube_uploader.py
tests/: __init__.py  test_agent.py
