[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "video-agent"
version = "0.1.0"
description = "Autonomous video agent for YouTube automation - trending search, video editing, voiceover, and upload"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Video Agent Team"}]

dependencies = [
    "python-dotenv>=1.0.0",
    "httpx>=0.24.0",
    "aiohttp>=3.9.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "click>=8.1.0",
    "tqdm>=4.66.0",
    "requests>=2.31.0",
    
    # Video processing
    "moviepy>=1.0.0",
    "opencv-python>=4.8.0",
    "ffmpeg-python>=0.2.1",
    "imageio>=2.33.0",
    
    # AI/LLM integration
    "openai>=1.3.0",
    "anthropic>=0.21.0",
    
    # Data processing
    "pandas>=2.1.0",
    "numpy>=1.24.0",
    
    # Web scraping & YouTube
    "yt-dlp>=2023.12.0",
    "google-auth-oauthlib>=1.2.0",
    "google-auth-httplib2>=0.2.0",
    "google-api-python-client>=2.106.0",
    "bs4>=0.0.2",
    "selenium>=4.15.0",
    
    # Speech & Audio
    "pydub>=0.25.1",
    "librosa>=0.10.0",
    "scipy>=1.11.0",
    
    # Subtitle generation
    "faster-whisper>=0.10.0",
    
    # Logging & Utils
    "loguru>=0.7.0",
    "python-slugify>=8.0.0",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.12.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[tool.setuptools]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
